build: remove build-system from pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py36, py37, py38
 
 [testenv]
-# Also setup.py, pyproject.toml
+# Also setup.py
 deps =
     # Requirements
     python-dateutil
