--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,9 @@ script:
 jobs:
   include:
   - stage: deploy
-    if: branch = master
+    if: (tag =~ ^v) AND (branch = master)
     script: skip
     deploy:
       provider: pypi
       username: "__token__"
       password: $PYPI_TOKEN
-      on:
-        tags: true
-
