--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-minimal
-lsi: true
 
 # jekyll-sitemap
-url: 'https://bdragon300.github.io/mongoengine-migrate/'
+url: 'https://bdragon300.github.io/mongoengine-migrate'
 plugins:
   - jekyll-sitemap
