--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.0.1a3"  # Also setup.py
+version = "0.0.2"  # Also setup.py
 tag_format = "v$version"
